infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mentor-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ninja-mentors.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mentor-ms-svc
                port:
                  number: 3000
